# fidloy_sdk

./: .gitignore  LICENSE  PYPI_RELEASE_CHECKLIST.md  README.md  pyproject.toml  verify_sdk.py
.github/workflows/: publish-pypi.yml
src/fidloy/: __init__.py
src/fidloy_sdk/: __init__.py  client.py  exceptions.py
tests/: test_client.py
